samples/_failures_safe/1761427416_aebbb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95b04e77.c: In function ‘main’:
./samples/SAFE/__tmp_95b04e77.c:146:44: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  146 |     if (!compress_rle((uint8_t*)input_str, input
      |                                            ^~~~~
      |                                            int
./samples/SAFE/__tmp_95b04e77.c:146:44: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_95b04e77.c:146:49: error: expected ‘)’ at end of input
  146 |     if (!compress_rle((uint8_t*)input_str, input
      |                      ~                          ^
      |                                                 )
./samples/SAFE/__tmp_95b04e77.c:146:10: error: too few arguments to function ‘compress_rle’
  146 |     if (!compress_rle((uint8_t*)input_str, input
      |          ^~~~~~~~~~~~
./samples/SAFE/__tmp_95b04e77.c:53:5: note: declared here
   53 | int compress_rle(const uint8_t *input, size_t input_len, Buffer *output) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_95b04e77.c:146:5: error: expected declaration or statement at end of input
  146 |     if (!compress_rle((uint8_t*)input_str, input
      |     ^~
